--- a/ansible/roles/general/tasks/main.yml
+++ b/ansible/roles/general/tasks/main.yml
@@ -34,27 +34,19 @@
 
 # Tmux and related stuff
 
-- name: Get oh-my-tmux template
-  git:
-    repo: https://github.com/gpakosz/.tmux
-    dest: '/home/{{ username }}/.tmux'
-    update: yes
+- name: Set .tmux.conf template
+  template:
+    src: tmux.template
+    dest: '/home/{{ username }.tmux.conf'
   become: false
 
-- name: Create link to tmux config file
-  shell: ln -s -f '/home/{{ username }}/.tmux/.tmux.conf'
+- name: Set .tmux.conf.local template
+  template:
+    src: tmux-local.template
+    dest: '/home/{{ username }.tmux.conf.local'
   become: false
-
-- name: Copy tmux local config file
-  shell: cp '/home/{{ username }}/.tmux/.tmux.conf.local' .
-  become: false
-
-- name: Set tmux as default shell
-  shell: usermod --shell $(which tmux) '{{ username }}'
 
 # Log2ram
-
-
 
 - name: Add lo2ram repositiory
   shell: echo "deb [signed-by=/usr/share/keyrings/azlux-archive-keyring.gpg] http://packages.azlux.fr/debian/ bullseye main" | sudo tee /etc/apt/sources.list.d/azlux.list && wget -O /usr/share/keyrings/azlux-archive-keyring.gpg  https://azlux.fr/repo.gpg
