Bluetooth PAN setup complete 🦷

--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -24,12 +24,13 @@ general_packages:
   - git
   - zsh
   - tmux
+  - neofetch
 
 ###################################
 #     bluetooth-pan variables     #
 ###################################
 
-bt-nap_requirements:
+btnap_requirements:
   - dbus-python
   - PyGObject
   - bridge-utils
@@ -42,5 +43,9 @@ bluetooth_packages:
   - avahi-daemon 
   - pulseaudio-module-bluetooth 
   - bluez
+  - python3-pip
+  - libglib2.0-dev
+  - libgirepository1.0-dev
+  - libcairo2-dev
 
 bluetooth_name: dropbox
