--- a/ansible/roles/general/tasks/main.yml
+++ b/ansible/roles/general/tasks/main.yml
@@ -26,6 +26,13 @@
     update: yes
   become: false
 
+- name: Get zsh-autosuggestions
+  git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions
+    dest: '/home/{{ username }}/.oh-my-zsh/plugins/zsh-autosuggestions'
+    update: yes
+  become: false
+
 - name: Set .zshrc template
   template:
     src: zshrc.template
