Replaced dropbox IP with variable 💣

--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -1,4 +1,10 @@
+###################################
+#      deployment variables       #
+###################################
+
 username: bacci
+
+dropbox_ip: 192.168.3.223
 
 ###################################
 #     raspi-config variables      #
